BankAccount.accountNumber and formatted properties has been removed from the API as useless. #TECO-175
